<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutMainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D39C9A9A"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rolledCombatantRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="8sp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginRight="8sp"
        android:layout_marginBottom="8sp"
        android:background="#C65C5A5A"
        android:orientation="horizontal"
        android:scrollbars="vertical">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center">


        <Button
            android:id="@+id/addCharMenuOpener"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8sp"
            android:layout_marginLeft="8sp"
            android:layout_marginTop="0sp"
            android:layout_marginEnd="24sp"
            android:layout_marginRight="24sp"
            android:layout_marginBottom="8sp"
            android:background="#C65C5A5A"
            android:text="@string/addOneCharacter"
            android:textSize="30sp" />

        <Button
            android:id="@+id/clearButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8sp"
            android:layout_marginLeft="8sp"
            android:layout_marginTop="0sp"
            android:layout_marginEnd="18sp"
            android:layout_marginRight="18sp"
            android:layout_marginBottom="8sp"
            android:background="#C65C5A5A"
            android:text="@string/clearButton"
            android:textSize="30sp" />

        <Button
            android:id="@+id/initiativeRoll"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="102sp"
            android:layout_height="46sp"
            android:layout_marginStart="8sp"
            android:layout_marginLeft="8sp"
            android:layout_marginTop="0sp"
            android:layout_marginEnd="24sp"
            android:layout_marginRight="24sp"
            android:layout_marginBottom="8sp"
            android:background="#C65C5A5A"
            android:text="@string/roll_initiative"
            android:textAllCaps="false"
            android:textSize="30sp" />

        <Button
            android:id="@+id/loadFromFiles"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8sp"
            android:layout_marginLeft="8sp"
            android:layout_marginTop="0sp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="18sp"
            android:layout_marginBottom="8sp"
            android:background="#C65C5A5A"
            android:text="@string/load"
            android:textAllCaps="false"
            android:textSize="30sp" />


        <Button
            android:id="@+id/saveToFile"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="24sp"
            android:layout_marginLeft="24sp"
            android:layout_marginTop="0sp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="18sp"
            android:layout_marginBottom="8sp"
            android:background="#C65C5A5A"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="30sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/unrolledCombatantRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="8sp"
        android:layout_marginLeft="8sp"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="12sp"
        android:layout_marginRight="12sp"
        android:layout_marginBottom="8sp"
        android:background="#C65C5A5A"
        android:orientation="horizontal"
        android:scrollbars="vertical">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:adSize="SMART_BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111">

    </com.google.android.gms.ads.AdView>


</LinearLayout>